# flatshaper

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/: assets.csv
assets/levels/lv1/: assets.csv
assets/models/: sprite.ply  sprite_ascii.ply
assets/shaders/: FragmentShader.glsl  VertexShader.glsl
include/flatshaper/: entity.hpp  glutil.hpp  main.hpp  plyutil.hpp
include/flatshaper/systems/: system_physics.hpp
include/flatshaper/systems/render/: system_render.hpp
include/glad/: glad.h
src/: entity.cpp  glad.c  glutil.cpp  main.cpp  plyutil.cpp
src/systems/: system_physics.cpp
src/systems/render/: render_assets.cpp  system_render.cpp
